major update of all features +home page +drawer

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -6,5 +6,9 @@
   "skip": "Skip",
   "done": "Done",
   "change_lang": "Change Language",
-  "change_theme": "Change Theme"
+  "change_theme": "Change Theme",
+  "intro": "Introduction",
+  "settings": "Settings",
+  "language": "Language",
+  "select_lang": "Select language"
 }
