--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -3,8 +3,12 @@
   "intro_title": "Заголовок вступления",
   "intro_body": "Вводная часть",
   "end": "Конец",
-  "skip": "Пропускать",
+  "skip": "Пропустить",
   "done": "Выполнено",
   "change_lang": "Изменить язык",
-  "change_theme": "Менять тему"
+  "change_theme": "Менять тему",
+  "intro": "Введение",
+  "settings": "Настройки",
+  "language": "Язык",
+  "select_lang": "Выберите язык"
 }
